feat(entry-confirmation): add configurable PDFs and orga codes
