# api/openapi.json
@@ -8230,14 +8230,8 @@
           "displacementCcm": {
             "type": "integer"
           },
-          "engineType": {
-            "type": "string"
-          },
           "cylinders": {
             "type": "integer"
-          },
-          "brakes": {
-            "type": "string"
           },
           "vehicleHistory": {
             "type": "string"
@@ -8258,9 +8252,7 @@
           "make",
           "model",
           "displacementCcm",
-          "engineType",
           "cylinders",
-          "brakes",
           "vehicleHistory"
         ]
       },
